src/test/ui/rfc-2093-infer-outlives/self-structs.stderr
error: rustc_outlives
  --> $DIR/self-structs.rs:4:1
   |
LL | struct Foo<'a, 'b, T> {
   | ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: T: 'a

error: aborting due to previous error

